--- a/BullsAndCows/BullsAndCows/BullsAndCows.vcxproj.filters
+++ b/BullsAndCows/BullsAndCows/BullsAndCows.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="readInput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="highScoreFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="readInput.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="highscoreFile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
